--- a/server/public/views/templates/schedule.html
+++ b/server/public/views/templates/schedule.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div ng-repeat="doc in date.docs" class="hoverDiv divHeightControl textAlign4">
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6">{{doc.name}}</div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6"><a href={{doc.url}}>{{doc.name}}</a></div>
                     <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6">
                         <button ng-click="vm.deleteGenDoc(doc, date)" class="btn-xs btn-danger">Delete</button>
                     </div>
@@ -51,7 +51,7 @@
             </div> <!-- General Documents Card Stop in Tier 2 -->
             <!-- Tasks Card Repeat in Tier 2 -->
             <div ng-if="date.showSubtable" class="col-xs-9 col-sm-9 col-md-9 col-ld-9">
-                <div ng-if="!date.showTaskInputs" class="divHeightControl textAlign4 greySeparator ">
+                <div ng-if="!date.showTaskInputs" class="divHeightControl textAlign4 greySeparator">
                     <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">Tasks</div>
                     <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">Time</div>
                     <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">OIC/NCOIC</div>
