--- a/server/public/views/templates/soldier.html
+++ b/server/public/views/templates/soldier.html
@@ -1,84 +1,38 @@
 <div ng-include="'views/partials/nav.html'"></div>
 <div class="container">
-    <table>
-        <thead>
-            <tr ng-hide="newSoldierShowHide">
-                <th><button ng-click="newSoldierShowHide = true">Add Soldier</button>Name</th>
-                <th>Eval</th>
-                <th>ETS</th>
-                <th>APFT</th>
-            </tr>
-            <tr ng-show="newSoldierShowHide">
-                <th>
-                    <button ng-click="vm.submitSoldierController(); newSoldierShowHide = false">Submit Soldier</button>
-                    <button ng-click="newSoldierShowHide = false">Cancel</button>
-                    <select ng-model="vm.newSoldierInfo.rank">
-                        <option>PVT</option>
-                        <option>PV2</option>
-                        <option>PFC</option>
-                        <option>SPC</option>
-                        <option>CPL</option>
-                        <option>SGT</option>
-                        <option>SSG</option>
-                        <option>SFC</option>
-                    </select>
-                    <input ng-model="vm.newSoldierInfo.last" placeholder="Last Name" type="text">
-                    <input ng-model="vm.newSoldierInfo.first" placeholder="First Name" type="text">
-                    <th ng-show="newSoldierShowHide">
-                        <input ng-model="vm.newSoldierInfo.ets" placeholder="ETS Date" type="date">
-                    </th>
-                </th>
-                <th><input ng-model="vm.newSoldierInfo.eval" placeholder="Eval Date" type="date"></th>
-                <th>
-                    <select ng-model="vm.newSoldierInfo.apft">
-                        <option>Pass</option>
-                        <option>Fail</option>
-                    </select>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat-start="soldier in vm.soldierRoster.list" ng-click="vm.toggleSoldierSubform(soldier)">
-                <td ng-if="!soldier.showEdit">{{soldier.rank}} {{soldier.last}}, {{soldier.first}}</td>
-                <!-- <td ng-if="soldier.showEdit">
-                    <select value={{soldier.rank}}>
-                        <option>PVT</option>
-                        <option>PV2</option>
-                        <option>PFC</option>
-                        <option>SPC</option>
-                        <option>CPL</option>
-                        <option>SGT</option>
-                        <option>SSG</option>
-                        <option>SFC</option>
-                    </select>
-                    <input value={{soldier.last}} type="text">
-                    <input value={{soldier.first}} type="text">
-                </td> -->
-                <td ng-if="!soldier.showEdit">{{soldier.eval | date: short}}</td>
-                <!-- <td ng-if="soldier.showEdit">
-                    <input value={{soldier.eval}} type="text">
-                </td> -->
-                <td ng-if="!soldier.showEdit">{{soldier.ets | date: short}}</td>
-                <!-- <td ng-if="soldier.showEdit">
-                    <input value={{soldier.ets}} type="text">
-                </td> -->
-                <td ng-if="!soldier.showEdit">{{soldier.apft}}</td>
-                <!-- <td ng-if="soldier.showEdit">
-                    <input value={{soldier.apft}} type="text">
-                </td> -->
-                <td ng-if="soldier.showSubtable" ng-click="vm.toggleSoldierSubform(soldier)">
-                    <!-- <button ng-click="vm.editSoldier(soldier); vm.toggleEdit(soldier)">Edit</button> -->
-                    <button ng-click="vm.removeSoldier(soldier)">Delete</button>
-                </td>
-            </tr>
-            <tr ng-if="soldier.showSubtable">
-                <th>Document</th>
-                <th><button ng-click="vm.addSoldierDoc(soldier)">Add Doc</button></th>
-            </tr>
-            <tr ng-if="soldier.showSubtable" ng-repeat="doc in soldier.docs" ng-repeat-end="">
-                <td><a href="{{doc.url}}">{{doc.name}}</a></td>
-                <td><button ng-click="vm.removeDoc(doc, soldier)">Delete</button></td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="divHeightControl textAlign4">
+            <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3 divHeightControl">Name</div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">Eval</div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">ETS</div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3 divHeightControl">Position</div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">
+                <button class="btn-xs btn-success" ng-click="">Add</button>
+            </div>
+        </div>
+        <div ng-repeat="soldier in vm.soldierRoster.list" class="greySeparator">
+            <!-- Soldier Roster Repeat Start -->
+            <div class="hoverDiv divHeightControl textAlign5">
+                <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3 divHeightControl">{{soldier.rank}} {{soldier.last}}, {{soldier.first}}</div>
+                <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">{{soldier.eval | date: 'dd MMM yyyy'}}</div>
+                <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">{{soldier.ets | date: 'dd MMM yyyy'}}</div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3 divHeightControl">{{soldier.position}}</div>
+                <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">
+                    <button ng-click="vm.addSoldierDoc(soldier)" class="btn-xs btn-success">Add</button>
+                    <button ng-click="vm.removeSoldier(soldier)" class="btn-xs btn-danger">Delete</button>
+                </div>
+            </div>
+            <!-- Soldier Roster Repeat End -->
+            <!-- Soldier Document Repeat Start -->
+            <div ng-repeat="doc in soldier.docs" class="col-xs-12 col-sm-12 col-md-12 col-ld-12 divHeightControl textAlign4">
+                <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6 divHeightControl">
+                    <a href="{{doc.url}}">{{doc.name}}</a>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6 divHeightControl">
+                    <button ng-click="vm.removeDoc(doc, soldier)" class="btn-xs btn-danger">Delete</button>
+                </div>
+            </div>
+            <!-- Soldier Document Repeat End -->
+        </div>
+    </div>
 </div>
