--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="container">
     <ul class="navBar">
-      <li class="navButton"><a href="#!user">User Home</a></li>
+      <!-- <li class="navButton"><a href="#!user">User Home</a></li> -->
       <li class="navButton"><a href="#!schedule">Schedule</a></li>
       <li class="navButton"><a href="#!soldier">Soldiers</a></li>
       <li class="navButton"><a href="#!vehicle">Vehicles</a></li>
