--- a/server/public/views/templates/schedule.html
+++ b/server/public/views/templates/schedule.html
@@ -29,7 +29,8 @@
                     <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">{{date.date | date: short}}</div>
                     <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">{{date.location}}</div>
                     <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6">
-                        <button class="btn-xs btn-warning">Edit</button>
+                        <button class="btn-xs btn-success">Add</button>
+                        <button ng-click="vm.toggleDateSubform(date);" class="btn-xs btn-warning">Edit</button>
                         <button ng-click="vm.toggleDateSubform(date); vm.deleteDate(date)" class="btn-xs btn-danger">Delete</button>
                     </div>
                 </div>
