--- a/server/public/views/templates/soldier.html
+++ b/server/public/views/templates/soldier.html
@@ -51,7 +51,7 @@
                 <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3 divHeightControl">{{soldier.position}}</div>
                 <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">
                     <button ng-click="vm.addSoldierDoc(soldier); vm.toggleSoldierDocs(soldier)" class="btn-xs btn-success">Add</button>
-                    <button ng-click="vm.toggleSoldierDocs(soldier)" class="btn-xs btn-warning">Edit</button> <!-- ng-click="vm.editSoldierInputs(soldier);" -->
+                    <button ng-click="vm.editSoldierInputs(soldier); vm.toggleSoldierDocs(soldier)" class="btn-xs btn-warning">Edit</button> <!-- ng-click="" -->
                     <button ng-click="vm.removeSoldier(soldier); vm.toggleSoldierDocs(soldier)" class="btn-xs btn-danger">Delete</button>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                     <input ng-model="soldier.first" type="text" placeholder="First" class="soldierNameInputs">
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">
-                    <input ng-model="soldier.eval" type="date" placeholder={{soldier.eval}}>
+                    <input ng-model="soldier.eval" type="date">
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">
                     <input ng-model="soldier.ets" type="date">
