--- a/server/public/views/templates/vehicle.html
+++ b/server/public/views/templates/vehicle.html
@@ -45,7 +45,7 @@
                     <button ng-click="vm.removeVehicle(vehicle); vm.toggleVehicleDocs(vehicle)" class="btn-xs btn-danger">Delete</button>
                 </div>
             </div>
-            <!-- Vehicle Document Inputs Start -->
+            <!-- Vehicle Edit Inputs Start -->
             <div ng-if="vehicle.inputsShowHide" class="textAlign4">
                 <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">
                     <input ng-model="vehicle.vehicle_model" type="text" placeholder="First" class="vehicleNameInputs">
@@ -64,7 +64,7 @@
                     <button class="btn-xs btn-warning" ng-click="vm.editVehicleInputs(vehicle);">Cancel</button>
                 </div>
             </div>
-            <!-- Vehicle Document Inputs End -->
+            <!-- Vehicle Edit Inputs End -->
             <!-- Vehicle Document Repeat Start -->
             <div ng-if="vehicle.showSubtable" class="col-xs-12 col-sm-12 col-md-12 col-ld-12">
                 <div ng-repeat="doc in vehicle.docs" class="col-xs-4 col-sm-4 col-md-4 col-ld-4 hoverDiv divHeightControl textAlign4 greyVertical">
