transfer glitch fixed, all documents are link to the document, some minor changes

--- a/server/public/views/templates/schedule.html
+++ b/server/public/views/templates/schedule.html
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div ng-repeat="doc in task.docs" class="divHeightControl textAlign2">
-                            <div class="col-xs-10 col-sm-10 col-md-10 col-ld-10">&nbsp;&nbsp;&nbsp;&nbsp;{{doc.name}}</div>
+                            <div class="col-xs-10 col-sm-10 col-md-10 col-ld-10">&nbsp;&nbsp;&nbsp;&nbsp;<a href={{doc.url}}>{{doc.name}}</a></div>
                             <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">
                                 <button class="btn-xs btn-danger">Delete</button>
                             </div>
