--- a/server/public/views/templates/schedule.html
+++ b/server/public/views/templates/schedule.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div ng-repeat="doc in date.docs" class="hoverDiv divHeightControl textAlign4">
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6"><a href={{doc.url}}>{{doc.name}}</a></div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6"><a class="doc" href={{doc.url}}>{{doc.name}}</a></div>
                     <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6">
                         <button ng-click="vm.deleteGenDoc(doc, date)" class="btn-xs btn-danger">Delete</button>
                     </div>
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div ng-repeat="doc in task.docs" class="divHeightControl textAlign2">
-                            <div class="col-xs-10 col-sm-10 col-md-10 col-ld-10">&nbsp;&nbsp;&nbsp;&nbsp;<a href={{doc.url}}>{{doc.name}}</a></div>
+                            <div class="col-xs-10 col-sm-10 col-md-10 col-ld-10">&nbsp;&nbsp;&nbsp;&nbsp;<a class="doc" href={{doc.url}}>{{doc.name}}</a></div>
                             <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">
                                 <button class="btn-xs btn-danger">Delete</button>
                             </div>
