--- a/server/public/views/templates/soldier.html
+++ b/server/public/views/templates/soldier.html
@@ -86,7 +86,7 @@
             <!-- Soldier Document Repeat Start -->
             <div ng-if="soldier.showSubtable" class="col-xs-12 col-sm-12 col-md-12 col-ld-12">
                 <div ng-repeat="doc in soldier.docs" class="col-xs-4 col-sm-4 col-md-4 col-ld-4 hoverDiv divHeightControl textAlign4 greyVertical">
-                    <a href="{{doc.url}}">{{doc.name}}</a>
+                    <a class="doc" href="{{doc.url}}">{{doc.name}}</a>
                     <button ng-click="vm.removeDoc(doc, soldier)" class="btn-xs btn-danger">Delete</button>
                 </div>
             </div>
